[PATCH] Fixed z-index of backdrop

--- a/client/app/sass/components/_form.scss
+++ b/client/app/sass/components/_form.scss
@@ -1,4 +1,5 @@
 .form {
+  z-index: 1;
     .form-instruction {
         font-size: $font-size-small;
         float: right;
