--- a/client/app/sass/components/_grid.scss
+++ b/client/app/sass/components/_grid.scss
@@ -6,6 +6,7 @@
     margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
+    z-index: 2;
 }
 
 .column,
